apps/app1/grant.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: allow-app1-to-app2
  namespace: app2
spec:
  from:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      namespace: app1
  to:
    - group: ""
      kind: Service
