apps/app1/http.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: app1-route
  namespace: app1
spec:
  parentRefs:
    - name: istio-ingressgateway
    - namespace: istio-system
  hostnames:
    - app.bergtobias.com
  rules:
    - matches:
        - path:
            type: Prefix
            value: /
      backendRefs:
        - name: app1
          port: 80
